--- a/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
@@ -11,43 +11,34 @@
             <div class="content">
                 <form [formGroup]="form" (ngSubmit)="onSubmit()">
                     <div class="form-group input-md">
-                        <input id="nome" type="text" placeholder=" " formControlName="nome" class="form-control inverted-out" readonly>
-                        <label class="disabled" for="nome">{{'geral.nome' | translate}}</label>
+                        <input type="text" placeholder=" " formControlName="nome" class="form-control inverted-out" readonly>
+                        <label class="disabled">{{'geral.nome' | translate}}</label>
                     </div>
                     <div class="form-group input-md">
                         <input type="text" placeholder=" " formControlName="sobrenome" class="form-control inverted-out" readonly>
-                        <label class="disabled" for="nome">{{'geral.sobrenome' | translate}}</label>
+                        <label class="disabled">{{'geral.sobrenome' | translate}}</label>
                     </div>
 
                     <div class="form-group input-md">
                         <input type="text" placeholder=" " formControlName="cpf" mask="000.000.000-00" class="form-control inverted-out" readonly>
-                        <label class="disabled" for="nome">{{'geral.cpf' | translate}}</label>
+                        <label class="disabled">{{'geral.cpf' | translate}}</label>
                     </div>
 
                     <div class="form-group input-md">
                         <input type="text" placeholder=" " class="form-control inverted-out" formControlName="nascimento" readonly>
-                        <label class="disabled" for="nome">{{'geral.dataDeNascimento' | translate}}</label>
+                        <label class="disabled">{{'geral.dataDeNascimento' | translate}}</label>
                     </div>
 
                     <h5>{{'geral.informacoesDeContato' | translate}}</h5>
-
-                    <div class="form-group input-md placeholder-active">
-                        <input
-                            type="text"
-                            formControlName="telefone"
-                            placeholder="(00)00000-0000"
-                            mask="(00)00000-0000"
-                            class="form-control inverted-out"
-                            [dropSpecialCharacters]="false"
-                            [validation]="false"
-                        >
-                        <label for="nome">{{'geral.telefone' | translate}}</label>
-                        <app-error-msg [control]="form.get('telefone')"></app-error-msg>
+                    
+                    <div class="form-group input-md">
+                        <input type="text" placeholder="(00)00000-0000" mask="(00) 00000-0000" formControlName="telefone" class="form-control inverted-out" readonly>
+                        <label class="disabled">{{'geral.telefone' | translate}}</label>
                     </div>
 
                     <div class="form-group input-md">
                         <input type="text" placeholder=" " formControlName="email" class="form-control inverted-out" readonly>
-                        <label class="disabled" for="nome">{{'geral.email' | translate}}</label>
+                        <label class="disabled">{{'geral.email' | translate}}</label>
                     </div>
 
                     <h5>{{'geral.endereco' | translate}}</h5>
@@ -61,25 +52,25 @@
                             class="form-control inverted-out"
                             [validation]="false"
                         >
-                        <label for="nome">{{'geral.cep' | translate}}</label>
+                        <label>{{'geral.cep' | translate}}</label>
                         <app-error-msg [control]="form.get('cep')"></app-error-msg>
                     </div>
 
                     <div class="form-group input-md placeholder-active">
                         <input type="text" placeholder="{{'geral.exLogradouro' | translate}}" formControlName="logradouro" class="form-control inverted-out">
-                        <label for="nome">{{'geral.logradouro' | translate}}</label>
+                        <label>{{'geral.logradouro' | translate}}</label>
                         <app-error-msg [control]="form.get('logradouro')"></app-error-msg>
                     </div>
 
                     <div class="form-group input-md">
                         <input type="text" placeholder=" " formControlName="numero" class="form-control inverted-out">
-                        <label for="nome">Nª</label>
+                        <label>Nª</label>
                         <app-error-msg [control]="form.get('numero')"></app-error-msg>
                     </div>
 
                     <div class="form-group input-md">
                         <input type="text" placeholder=" " formControlName="bairro" class="form-control inverted-out">
-                        <label for="nome">{{'geral.bairro' | translate}}</label>
+                        <label>{{'geral.bairro' | translate}}</label>
                         <app-error-msg [control]="form.get('bairro')"></app-error-msg>
                     </div>
 
@@ -90,7 +81,7 @@
                             <option *ngFor="let estado of estados" [value]="estado.id">{{estado.nome}}
                             </option>
                         </select>
-                        <label for="nome">{{'geral.estado' | translate}}</label>
+                        <label>{{'geral.estado' | translate}}</label>
                         <app-error-msg [control]="form.get('estado')"></app-error-msg>
                     </div>
 
@@ -100,13 +91,13 @@
                             <option *ngFor="let cidade of cidades" [value]="cidade.id"
                                 [selected]="cidade.id === cidadeSelecionada">{{cidade.nome}}</option>
                         </select>
-                        <label for="nome">{{'geral.cidade' | translate}}</label>
+                        <label>{{'geral.cidade' | translate}}</label>
                         <app-error-msg [control]="form.get('cidade')"></app-error-msg>
                     </div>
 
                     <div class="form-group input-md">
                         <input [type]="mostrarSenha ? 'text' : 'password'" placeholder=" " formControlName="senha_atual" class="form-control inverted-out">
-                        <label for="nome">{{'senhas.senhaAtual' | translate}}</label>
+                        <label>{{'senhas.senhaAtual' | translate}}</label>
                         <i class="fa showPassword" [ngClass]="mostrarSenha ? 'fa-eye-slash' : 'fa-eye'" (click)="mostrarSenha = !mostrarSenha"></i>
                         <app-error-msg [control]="form.get('senha_atual')"></app-error-msg>
                     </div>
