--- a/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
@@ -267,7 +267,7 @@
                             </a>
                         </li>
                         <li class="cambista-subitem">
-                            <a [routerLink]="['/bank-accounts']" routerLinkActive="router-link-active">
+                            <a [routerLink]="['/add-bank-account']" routerLinkActive="router-link-active">
                                 <span class="regiao-nome">{{'bankAccounts.title' | translate}}</span>
                             </a>
                         </li>
