--- a/src/app/shared/layout/list-bank-accounts/list-bank-accounts.component.html
+++ b/src/app/shared/layout/list-bank-accounts/list-bank-accounts.component.html
@@ -22,7 +22,7 @@
                         <span class="account__account-type">Conta {{ accountItem.tipoConta }}</span>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4" *ngIf="accounts.length < 3">
                     <div class="new-account__card" (click)="openAddBankAccount()">
                         <i class="fa fa-plus-circle new-account__icon" aria-hidden="true"></i>
                         <span class="new-account__label">Nova conta</span>
