--- a/src/app/shared/layout/exibir-bilhete/desafio/exibir-bilhete-desafio.component.html
+++ b/src/app/shared/layout/exibir-bilhete/desafio/exibir-bilhete-desafio.component.html
@@ -26,7 +26,7 @@
                 <b>HORÁRIO:</b> {{aposta.horario | moment: 'DD/MM/YYYY HH:mm'}}
             </p>
             <p id="resultado-final">
-                <b>RESULTADO: </b>
+                <b>{{ 'geral.resultado' | translate }}: </b>
                 <span *ngIf="aposta.resultado" class="{{aposta.resultado}}">{{aposta.resultado}}</span>
                 <span *ngIf="!aposta.resultado">aguardando</span>
             </p>
