Feat: Added new modal last accesses in mobile screen

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -462,6 +462,15 @@
                                         <i class="fa-solid fa-angle-right"></i>
                                     </span>
                                 </a>
+                                <a (click)="openLastAccesses()">
+                                    <span>
+                                        <i class="fa fa-clock-rotate-left"></i>
+                                    </span>
+                                    {{ 'geral.lastAccesses' | translate }}
+                                    <span class="arrow-nav">
+                                        <i class="fa-solid fa-angle-right"></i>
+                                    </span>
+                                </a>
                                 <a (click)="abrirConfiguracoes()">
                                     <span>
                                         <i class="fa fa-cogs"></i>
