--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -3,7 +3,7 @@
 #app {
   width: 100%;
   height: 100vh;
-  background: #0a0a0a;
+  background: #181818;
   background: var(--background);
 }
 
@@ -19,8 +19,8 @@
 body {
   min-height: 100vh;
   color: #ffffff;
-  color: var(--foreground-league);
-  background: #0a0a0a;
+  color: var(--foreground);
+  background: #181818;
   background: var(--background);
   margin: 0;
   padding: 0;
