--- a/src/app/clientes/perfil/cliente-perfil.component.css
+++ b/src/app/clientes/perfil/cliente-perfil.component.css
@@ -33,6 +33,18 @@ label {
     position: relative;
 }
 
+#legitimuz-container{
+    padding-bottom: 56px;
+}
+
+#verify-identity-text{
+    padding-bottom: 12px;
+    opacity: 0.8;
+}
+#faceMatch {
+    margin-bottom: 16px;
+}
+
 @media only screen and (max-width: 1024px) {
     h2 {
         font-size: 18px;
@@ -64,4 +76,26 @@ label {
         margin-bottom: 0;
     }
 
+}
+
+@media only screen and (min-width: 481px ) {
+    .buttons {
+        display: flex;
+        justify-content: end;
+        align-items: center;
+    }
+}
+
+@media only screen and (max-width: 480px ) {
+    .buttons button {
+        flex: 1;
+        margin: 0 !important;
+    }
+    
+    .buttons {
+        gap: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
