--- a/src/app/clientes/perfil/cliente-perfil.component.html
+++ b/src/app/clientes/perfil/cliente-perfil.component.html
@@ -170,21 +170,46 @@
                         </div>
                     </fieldset>
                     <fieldset>
-                        <div class="row">
-                            <div class="col col-md-12">
-                                <div class="form-group text-right">
-                                    <button class="btn btn-custom2 w-150 mr-4" type="button" (click)="resetarForm()">
-                                        {{'geral.cancelar' | translate}}
-                                    </button>
-                                    <button
-                                        class="btn btn-custom w-150"
-                                        type="submit"
-                                        [disabled]="form.invalid"
-                                    >
-                                        {{'geral.atualizar' | translate}}
+                        <div *ngIf="faceMatchEnabled">
+                            <h5 id="faceMatch">Reconhecimento Facial</h5>
+                            <div #legitimuz id="legitimuz-container" *ngIf="faceMatchEnabled && !faceMatchProfileEdit && !verifiedIdentity">
+                                <div id="legitimuz">
+                                    <div id="verify-identity-text">
+                                        {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
+                                    </div>
+                                    <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
+                                    <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity" [disabled]="faceMatchfaceMatchProfileEdit">
+                                        <i class="fa-solid fa-id-card"></i>
+                                        {{'saques.identityVerify' | translate}}
                                     </button>
                                 </div>
+                                <div id="legitimuz-root"></div>
                             </div>
+                            <div #legitimuzLiveness id="legitimuz-container" *ngIf="faceMatchEnabled && !faceMatchProfileEdit && verifiedIdentity">
+                                <div id="legitimuz">
+                                    <div id="verify-identity-text">
+                                        {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
+                                    </div>
+                                    <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
+                                    <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity" [disabled]="faceMatchfaceMatchProfileEdit">
+                                        <i class="fa-solid fa-id-card"></i>
+                                        {{'saques.identityVerify' | translate}}
+                                    </button>
+                                </div>
+                                <div id="legitimuz-root"></div>
+                            </div>
+                        </div>
+                        <div class="buttons">
+                            <button class="btn btn-custom2 w-150 mr-4" type="button" (click)="resetarForm()">
+                                {{'geral.cancelar' | translate}}
+                            </button>
+                            <button
+                                class="btn btn-custom w-150"
+                                type="submit"
+                                [disabled]="form.invalid && !faceMatchfaceMatchProfileEdit"
+                            >
+                                {{'geral.atualizar' | translate}}
+                            </button>
                         </div>
                     </fieldset>
                 </form>
