--- a/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.css
+++ b/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.css
@@ -17,14 +17,6 @@ h5 {
     margin-bottom: 25px;
 }
 
-
-.buttons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
 .btnClose {
     font-size: 32px;
     line-height: 22px;
@@ -35,19 +27,17 @@ h5 {
     cursor: pointer;
 }
 
-@media only screen and (max-width: 1024px) {
-    .modal-body {
-        padding: 20px;
-    }
 
-    .buttons {
-        gap: 20px;
-    }
+#legitimuz-container{
+    padding-bottom: 56px;
+}
 
-    .buttons button {
-        flex: 1;
-        margin: 0 !important;
-    }
+#verify-identity-text{
+    padding-bottom: 12px;
+    opacity: 0.8;
+}
+#faceMatch {
+    margin-bottom: 16px;
 }
 
 @media only screen and (max-width: 480px) {
@@ -79,4 +69,36 @@ h5 {
         top: 12px;
         font-size: 12px;
     }
+    .buttons button {
+        flex: 1;
+        margin: 0 !important;
+    }
+    
+    .buttons {
+        gap: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
+
+@media only screen and (min-width: 481px) {
+    .buttons {
+        display: flex;
+        justify-content: end;
+        align-items: center;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .modal-body {
+        padding: 20px;
+    }
+    
+    .buttons {
+        gap: 20px;
+    }
+}
+
+
+
