--- a/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
@@ -101,7 +101,35 @@
                         <i class="fa showPassword" [ngClass]="mostrarSenha ? 'fa-eye-slash' : 'fa-eye'" (click)="mostrarSenha = !mostrarSenha"></i>
                         <app-error-msg [control]="form.get('senha_atual')"></app-error-msg>
                     </div>
-
+                    <div *ngIf="faceMatchEnabled">
+                        <h5 id="faceMatch">Reconhecimento Facial</h5>
+                        <div #legitimuz id="legitimuz-container" *ngIf="faceMatchEnabled && !faceMatchProfileEdit && !verifiedIdentity">
+                            <div id="legitimuz">
+                                <div id="verify-identity-text">
+                                    {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
+                                </div>
+                                <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
+                                <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity" [disabled]="faceMatchfaceMatchProfileEdit">
+                                    <i class="fa-solid fa-id-card"></i>
+                                    {{'saques.identityVerify' | translate}}
+                                </button>
+                            </div>
+                            <div id="legitimuz-root"></div>
+                        </div>
+                        <div #legitimuzLiveness id="legitimuz-container" *ngIf="faceMatchEnabled && !faceMatchProfileEdit && verifiedIdentity">
+                            <div id="legitimuz">
+                                <div id="verify-identity-text">
+                                    {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
+                                </div>
+                                <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
+                                <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity" [disabled]="faceMatchfaceMatchProfileEdit">
+                                    <i class="fa-solid fa-id-card"></i>
+                                    {{'saques.identityVerify' | translate}}
+                                </button>
+                            </div>
+                            <div id="legitimuz-root"></div>
+                        </div>
+                    </div>
                     <div class="buttons">
                         <button class="btn btn-custom2 w-150 mr-4" type="button" (click)="activeModal.dismiss('Cross click')">
                             {{'geral.cancelar' | translate}}
@@ -109,7 +137,7 @@
                         <button
                             class="btn btn-custom w-150"
                             type="submit"
-                            [disabled]="form.invalid"
+                            [disabled]="form.invalid && !faceMatchfaceMatchProfileEdit"
                         >
                             {{'geral.atualizar' | translate}}
                         </button>
