Adjusted logic in update button

--- a/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
@@ -137,7 +137,7 @@
                         <button
                             class="btn btn-custom w-150"
                             type="submit"
-                            [disabled]="form.invalid && !faceMatchfaceMatchProfileEdit"
+                            [disabled]="form.invalid || !faceMatchfaceMatchProfileEdit"
                         >
                             {{'geral.atualizar' | translate}}
                         </button>
