--- a/src/app/shared/layout/list-bank-accounts/list-bank-accounts.component.scss
+++ b/src/app/shared/layout/list-bank-accounts/list-bank-accounts.component.scss
@@ -15,10 +15,6 @@
     margin-top: 20px;
 }
 
-.list-accounts div {
-    margin-bottom: 10px;
-}
-
 .account__card {
     width: 100%;
     height: auto;
@@ -52,8 +48,23 @@
     cursor: pointer;
 }
 
+.name-bank-account{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 90%;
+}
+
+.list-accounts div {
+    margin-bottom: 10px;
+}
+
 @media only screen and (min-width: 660px) {
     #default-content {
         padding: 20px;
+    }
+
+    .list-accounts div {
+        margin-bottom: 0px;
     }
 }
