--- a/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
+++ b/src/app/shared/layout/modals/cliente-perfil-modal/cliente-perfil-modal.component.html
@@ -109,7 +109,7 @@
                                     {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
                                 </div>
                                 <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
-                                <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity" [disabled]="faceMatchfaceMatchProfileEdit">
+                                <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity" [disabled]="faceMatchProfileEdit">
                                     <i class="fa-solid fa-id-card"></i>
                                     {{'saques.identityVerify' | translate}}
                                 </button>
@@ -122,7 +122,7 @@
                                     {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
                                 </div>
                                 <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
-                                <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity" [disabled]="faceMatchfaceMatchProfileEdit">
+                                <button id="legitimuz-action-faceindex" class="btn btn-custom" *ngIf="!disapprovedIdentity" [disabled]="faceMatchProfileEdit">
                                     <i class="fa-solid fa-id-card"></i>
                                     {{'saques.identityVerify' | translate}}
                                 </button>
@@ -137,7 +137,7 @@
                         <button
                             class="btn btn-custom w-150"
                             type="submit"
-                            [disabled]="form.invalid || !faceMatchfaceMatchProfileEdit"
+                            [disabled]="form.invalid || !faceMatchProfileEdit"
                         >
                             {{'geral.atualizar' | translate}}
                         </button>
