--- a/src/app/clientes/perfil/cliente-perfil.component.html
+++ b/src/app/clientes/perfil/cliente-perfil.component.html
@@ -171,7 +171,7 @@
                     </fieldset>
                     <fieldset>
                         <div *ngIf="faceMatchEnabled">
-                            <h5 id="faceMatch">Reconhecimento Facial</h5>
+                            <h5 id="faceMatch">{{'face_match.label' | translate}}</h5>
                             <div #legitimuz id="legitimuz-container" *ngIf="faceMatchEnabled && !verifiedIdentity">
                                 <div id="legitimuz">
                                     <div id="verify-identity-text">
